--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,17 +21,18 @@ body {
 .cont-nav {
     display: grid;
     grid-area: navb;
-    grid-template-columns: 10rem auto;
-    grid-template-rows: 100%;
-    grid-template-areas: 'head nav';
+    grid-template-columns: 100%;
+    grid-template-rows: 4.5em auto;
+    grid-template-areas: 'head' 'nav';
+    /* gap: 10%; */
 }
 
 header {
     grid-area: head;
     background-image: url(https://cdn.discordapp.com/attachments/941095160517894185/1082999295378198568/Asset_33x.png);
     background-position: center;
-    background-size: cover;
     background-repeat: no-repeat;
+    background-size: 2.5%;
     background-color: #f6b93f;
     display: flex;
     align-items: center;
@@ -39,8 +40,8 @@ header {
     flex-direction: column;
     /* border: 1px solid black; */
     box-shadow: 0px 1px 10px -2px #f6b93f;
-    z-index: 999;
-    /* padding: 49px 0; */
+    padding: 3% 0;
+    z-index: 9999;
 }
 
 header>img {
@@ -564,6 +565,9 @@ input:focus {
     .info>p {
         font-size: 1.5rem;
     }
+    header {
+        background-size: 8%;
+    }
 }
 
 .info {
@@ -574,17 +578,9 @@ input:focus {
     width: 100%;
 }
 
-.cont-nav {
-    display: grid;
-    grid-area: navb;
-    grid-template-columns: 100%;
-    grid-template-rows: 4rem auto;
-    grid-template-areas: 'head' 'nav';
-}
 
-header {
-    grid-area: head;
-}
+
+
 
 .navbar {
     grid-area: nav;
