--- a/styles2.css
+++ b/styles2.css
@@ -69,7 +69,7 @@ section {
     min-height: 70vh;
     font-family: sans-serif;
     font-size: larger;
-    padding-left: 7.7rem;
+    /* padding-left: 7.7rem; */
     text-align: left;
     padding-left: 10rem;
 }
@@ -242,8 +242,11 @@ section>p {
         display: flex;
     }
     main {
-        grid-template-columns: 0% 100%;
+        /* grid-template-columns: 0% 100%; */
         height: 400vh;
+        background-color: yellow;
+        /* display: flex; */
+        justify-content: center;
     }
     .weap {
         display: none;
@@ -255,6 +258,12 @@ section>p {
         max-width: 4em;
         min-height: 10rem;
     }
+    section {
+        justify-content: center;
+        text-align: center;
+        padding: 0;
+        transform: translateX(15%);
+    }
     section>p {
         padding-right: 2em;
     }
@@ -263,7 +272,10 @@ section>p {
         height: 15rem;
     }
     .info-1:nth-child(2) {
-        width: 1rem;
+        width: 5rem;
+        position: absolute;
+        right: 0%;
+        bottom: 0%;
     }
     .hidden>img {
         width: 20rem;
@@ -294,7 +306,7 @@ section>p {
     .hidden {
         opacity: 0;
         filter: blur(10px);
-        transform: translateY(-10%);
+        transform: translateY(-10%) translateX(0%);
         transition: all 1.5s;
         grid-area: hiddenn;
         /* background-color: blue; */
@@ -306,6 +318,6 @@ section>p {
     .show {
         opacity: 1;
         filter: blur(0);
-        transform: translateY(0%);
+        transform: translateY(0%) translateX(0%);
     }
 }
