--- a/styles2.css
+++ b/styles2.css
@@ -244,7 +244,8 @@ section>p {
     main {
         /* grid-template-columns: 0% 100%; */
         height: 400vh;
-        background-color: yellow;
+        /* background-color: yellow; */
+        margin: 0;
         /* display: flex; */
         justify-content: center;
     }
