--- a/styles2.css
+++ b/styles2.css
@@ -118,7 +118,7 @@ section {
     width: 3.5px;
     height: 0%;
     background: #f9c764;
-    z-index: 10000;
+    /* z-index: 10000; */
     display: none;
 }
 
@@ -178,6 +178,8 @@ h1::after {
     /* left: 58px; */
     grid-area: cont-q;
     z-index: 999;
+    /* position: absolute;
+    left: 0%; */
 }
 
 .q {
@@ -190,7 +192,7 @@ h1::after {
     align-items: center;
     justify-content: center;
     background: white;
-    /* position: absolute; */
+    position: absolute;
     font-family: 'Poppins', sans-serif;
     font-size: larger;
     font-weight: 600;
@@ -248,6 +250,10 @@ section>p {
         margin: 0;
         /* display: flex; */
         justify-content: center;
+        grid-template-areas: 'contplan';
+        grid-template-rows: 100%;
+        grid-template-columns: 100%;
+        padding: 10% 5%;
     }
     .weap {
         display: none;
