--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,7 +260,7 @@ footer {
 }
 
 .firstt {
-    background-image: url(https://cdn.discordapp.com/attachments/941095160517894185/1051511256932163684/wallpaperflare.com_wallpaper_1.jpg);
+    background-image: url(https://cdn.discordapp.com/attachments/941095160517894185/1106919230265364573/wallpaperflare.com_wallpaper_1_1.webp);
 }
 
 .secondd {
