--- a/styles/styles.css
+++ b/styles/styles.css
@@ -264,11 +264,11 @@ footer {
 }
 
 .secondd {
-    background-image: url(https://cdn.discordapp.com/attachments/941095160517894185/1051538414085865502/wallpaperflare.com_wallpaper.jpg);
+    background-image: url(https://cdn.discordapp.com/attachments/941095160517894185/1106922109898342453/wallpaperflare.com_wallpaper_1.webp);
 }
 
 .thirdd {
-    background-image: url(https://cdn.discordapp.com/attachments/941095160517894185/1052205906202472468/wallpaperflare.com_wallpaper.jpg);
+    background-image: url(https://cdn.discordapp.com/attachments/941095160517894185/1106937856586432572/wallpaperflare.com_wallpaper-_1__1.webp);
 }
 
 .article1 {
